--- a/package.json
+++ b/package.json
@@ -12,25 +12,27 @@
     "check-types": "tsc --noemit"
   },
   "dependencies": {
-    "@types/node": "20.4.9",
-    "@types/react": "18.2.19",
-    "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.14",
+    "autoprefixer": "^10.4.19",
     "clsx": "^2.1.1",
-    "eslint": "8.46.0",
-    "eslint-config-next": "13.4.13",
-    "next": "14.2.3",
+    "next": "^14.2.3",
     "npm-run-all": "^4.1.5",
-    "postcss": "8.4.31",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3",
+    "postcss": "^8.4.38",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "tailwindcss": "^3.4.4",
     "tw-merge": "0.0.1-alpha.3",
-    "typescript": "5.1.6"
+    "typescript": "^5.4.5"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "prettier": "^3.2.5"
+    "@types/node": "^20.14.2",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^7.12.0",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.3",
+    "eslint-plugin-react": "^7.34.2",
+    "prettier": "^3.3.1",
+    "prettier-plugin-tailwindcss": "^0.6.2"
   }
 }
