--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,29 +15,29 @@
     "jsx": "preserve",
     "incremental": true,
     "paths": {
-			"@/style/*": ["./src/styles/*"],
-			
-			"@/page/*": ["./src/pages/*"],
-			"@/feature/*": ["./src/components/features/*"],
-			"@/layout/*": ["./src/components/layouts/*"],
-			"@/module/*": ["./src/components/modules/*"],
-			"@/element/*": ["./src/components/elements/*"],
-			"@/icon/*": ["./src/components/icons/*"],
-
-			"@/context/*": ["./src/contexts/*"],
-			"@/wrapper/*": ["./src/wrappers/*"],
-			"@/hook/*": ["./src/hooks/*"],
-
-			"@/class/*": ["./src/classes/*"],
-			"@/instance/*": ["./src/instances/*"],
-			"@/util/*": ["./src/utils/*"],
-			"@/constant/*": ["./src/constants/*"],
-			"@/type/*": ["./src/types/*"],
-
-			"@/image/*": ["./src/assets/images/*"],
-			"@/font/*": ["./src/assets/fonts/*"],
-    }
+      "@/style/*": ["./src/styles/*"],
+      "@/feature/*": ["./src/components/features/*"],
+      "@/layout/*": ["./src/components/layouts/*"],
+      "@/module/*": ["./src/components/modules/*"],
+      "@/element/*": ["./src/components/elements/*"],
+      "@/icon/*": ["./src/components/icons/*"],
+      "@/context/*": ["./src/contexts/*"],
+      "@/wrapper/*": ["./src/wrappers/*"],
+      "@/hook/*": ["./src/hooks/*"],
+      "@/class/*": ["./src/classes/*"],
+      "@/instance/*": ["./src/instances/*"],
+      "@/util/*": ["./src/utils/*"],
+      "@/constant/*": ["./src/constants/*"],
+      "@/type/*": ["./src/types/*"],
+      "@/image/*": ["./src/assets/images/*"],
+      "@/font/*": ["./src/assets/fonts/*"]
+    },
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
